; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_deprecated.c_svn_client_mkdir3.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_deprecated.c_svn_client_mkdir3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.capture_baton_t = type { i32*, i32** }

@capture_commit_info = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_client_mkdir3(i32** %0, i32* %1, i32 %2, i32* %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca %struct.capture_baton_t, align 8
  store i32** %0, i32*** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  store i32* %5, i32** %12, align 8
  %14 = load i32**, i32*** %7, align 8
  %15 = getelementptr inbounds %struct.capture_baton_t, %struct.capture_baton_t* %13, i32 0, i32 1
  store i32** %14, i32*** %15, align 8
  %16 = load i32*, i32** %12, align 8
  %17 = getelementptr inbounds %struct.capture_baton_t, %struct.capture_baton_t* %13, i32 0, i32 0
  store i32* %16, i32** %17, align 8
  %18 = load i32*, i32** %8, align 8
  %19 = load i32, i32* %9, align 4
  %20 = load i32*, i32** %10, align 8
  %21 = load i32, i32* @capture_commit_info, align 4
  %22 = load i32*, i32** %11, align 8
  %23 = load i32*, i32** %12, align 8
  %24 = call i32* @svn_client_mkdir4(i32* %18, i32 %19, i32* %20, i32 %21, %struct.capture_baton_t* %13, i32* %22, i32* %23)
  ret i32* %24
}

declare dso_local i32* @svn_client_mkdir4(i32*, i32, i32*, i32, %struct.capture_baton_t*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
